# jarvis

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  JARVIS-DISCOVERY.md  LAUNCH.md  PRD.md  guardrails.json  index.html  package-lock.json  package.json  progress.json  tailwind.config.ts  tsconfig.json  vite.config.ts
backend/: main.py  pyproject.toml  requirements.txt
backend/core/: env_scanner.py
db/migrations/: 001_initial.sql
src/main/: index.ts
src/main/ipc/: auth.ipc.ts  projects.ipc.ts  settings.ipc.ts
src/main/services/: auth-store.ts  db.ts  python-bridge.ts
src/preload/: index.ts
src/renderer/: App.tsx  main.tsx
src/renderer/components/: EnvironmentScanner.tsx
src/renderer/components/hud/: ArcMeter.tsx  CircularProgress.tsx  GlowPanel.tsx  PulseIndicator.tsx  ScanLine.tsx  index.ts
src/renderer/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/renderer/components/settings/: AgentSettings.tsx  AuthSettings.tsx
src/renderer/pages/: Agents.tsx  Dashboard.tsx  Logs.tsx  Planner.tsx  Projects.tsx  Settings.tsx
src/renderer/styles/: animations.css  globals.css  jarvis-theme.css
src/renderer/types/: electron.d.ts
src/shared/: constants.ts
