[project]
name = "jarvis-backend"
version = "1.0.0"
description = "JARVIS Python Backend"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.40",
    "aiofiles>=23.2.1",
    "cryptography>=41.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
]
